# open-core-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  reset-git-history.sh
cli/: Cargo.toml  Cargo.toml.public  convert-number.js  debug-encoding.js  generate-test-glyphs.js  jest.config.js  package-lock.json  package.json  test-420.js  test-length.js  test_efficiency.md  test_input.txt  triforce.trit  tsconfig.cli.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo
cli/examples/quantum/: entanglement.json  phase_rotation.json  quantum_fourier.json  superposition.json  ternary_grover.json
cli/src/: index.ts  main.rs  runtime_binary.rs  tetragram_commands.rs
cli/src/commands/: analyze.ts  asm.ts  audit.ts  balance.ts  benchmark.ts  bridge.ts  call.ts  check.ts  cli.integration.test.ts  compile.ts  config.ts  coverage.ts  debug.ts  decode-glyphs.ts  decode.ts  decrypt.ts  deploy.ts  diff.ts  doctor.ts  encode-glyphs.ts  encode.ts  encrypt.ts  faucet.ts  fuzz.ts  gas-report.ts  gas_estimate.rs  gas_estimate.rs.bak  hash.ts  help.ts  init.ts  keys.ts  logs.ts  migrate.ts  mod.rs  network.ts  plugin.ts  profile.ts  quantum.ts  replay.ts  run.ts  (+10 more)
cli/src/utils/: instructionParser.ts  (+7 more)
cli/test/: asm.test.ts  performance.test.ts  quantum.test.ts
cli/test-samples/: assembly-test.asm  bytecode-test.hex  tetragram-test.txt
cli/tests/: doc_tests.rs  supreme_mystery_canon_test.md
cli/vm_outputs/: decrypted.txt  encrypted.trit  pure_tesla.sm  tesla_decoded.txt  tesla_demo.sm  tesla_encoded.sm  tvm_patreon_link.sm  tvm_patreon_link_decoded.txt
(+42 files in other folders)
